--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -9,3 +9,21 @@
     import 'relative/path/to/stylesheet.scss';
 
 */
+.btn-light-on{
+    filter: brightness(115%);
+      color: #fff;
+  text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px #0fa,
+    0 0 82px #0fa,
+    0 0 92px #0fa,
+    0 0 102px #0fa,
+    0 0 151px #0fa;
+    font-size: 25px;
+}
+
+body{
+    background-color: beige;
+}
